--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
+    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>
   </head>
-  <body>
+  <body style='margin : 0px; overflow: hidden;'>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
+    <div id="root"></div>   
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
